Styles applied for section-about. Overflow for the section-autor style was fixed.

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -11,26 +11,25 @@ body {
 
 /* General Styles for Sections */
 .section {
-    padding: 4em;
-    border-color: transparent;
+    padding: 2em;
+    border-color: 3px transparent;
     font-family: 'Space Grotesk', sans-serif;
-    font-size: 1.5em;
-    min-width: 100px;
-    min-height: 180px;
+    font-size: 1em;
+    max-width: 100%;
+    display: flex;
 }
 
 /* Section "About" Styles */
 .section-about {
     background-color: #FFE0E9;
-    display: flexbox;
     
 }
 
 /* Sections "Greeting" (some word or phrase that needs to be addressed but not as a title per se) */
 .section-greeting {
     font-weight: 700;
-    font-size: 2em;
-    padding: 0%;
+    font-size: 2rem;
+    padding: 0%;    
 }
 
 /* Sections "Author" (whether it's a quote author or the author of this site, for example) */
@@ -41,3 +40,52 @@ body {
     padding: 0%;
     margin: 0;
 }
+
+.section-description {
+    word-wrap: break-word;
+    font-size: 1.5rem;
+}
+
+/* Sections "Principal Image" always related with the head of the section*/
+.section-image {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+/* Button specifications to meet the aesthetic of the web site*/
+.btn {
+    border-style: none;
+    padding: 15px;
+    border-radius: 12px;
+    text-align: center;
+    text-decoration: none;
+    font-family: 'Noto Color Emoji', sans-serif;
+    font-weight: bold;
+    font-size: 1rem;
+    text-shadow: 1px 1px 5px black;
+    display: inline-block;
+}
+
+/* Primary is set to main color of the palette which is #B9375E */
+.btn-primary {
+    background-color: #B9375E;
+    color: #FFE0E9;
+}
+
+/* Secondary is set to second-main color of the palette which is #FFE0E9 */
+.btn-secondary {
+    background-color: #FFE0E9;
+    color: #B9375E;
+    
+}
+
+/* Size and Style definition for Icons related to skills */
+.icon-skill {
+    width: fit-content;
+    height: fit-content;
+}
+
+/* .flex-container {
+
+} */
